# time-to-event-haskell

./: CHANGELOG.md  README.md  time-to-event.cabal
scripts/: center-and-scale.R
src/: CoxPH.hs
src/CoxPH/: CenterAndScale.hs  CoxPHUpdateNewtonRaphson.hs  Data.hs  OrderByStrata.hs
test/: Main.hs  TestCoxPH.hs
test/TestCoxPH/: TestCoxPHUpdateNewtonRaphson.hs
