cabal-version:      3.0
name:               time-to-event
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             David Pritchard
maintainer:         david.al.pritchard@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  CoxPH
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.14,
        text >= 2,
        vector ^>= 0.13
    hs-source-dirs:   src
    default-language: GHC2021

test-suite time-to-event-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.14,
        time-to-event
